fix: resize position & td overflow

--- a/src/components/Header.less
+++ b/src/components/Header.less
@@ -5,7 +5,7 @@
   overflow: auto;
   position: sticky;
   top: 0;
-  z-index: 3;
+  z-index: 4;
 
   &-table {
     table-layout: fixed;
