--- a/src/index.less
+++ b/src/index.less
@@ -72,9 +72,9 @@
   }
 
   &-resize-bar{
-    position: absolute;
+    position: fixed;
     top: 0;
-    bottom: 0;
+    height: 0;
     width: 0;
     border-left: 1px solid #0052f2;
     z-index: 10;
